--- a/MyLeasing.Web/Views/PropertyTypes/Edit.cshtml
+++ b/MyLeasing.Web/Views/PropertyTypes/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeasing.Web.Data.Entities.Owner
+﻿@model MyLeasing.Web.Data.Entities.PropertyType
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,13 +6,18 @@
 
 <h2>Edit</h2>
 
-<h4>Owner</h4>
+<h4>PropertyType</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
@@ -24,6 +29,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
