--- a/MyLeasing.Prism/MyLeasing.Prism/Views/PropertiesPage.xaml
+++ b/MyLeasing.Prism/MyLeasing.Prism/Views/PropertiesPage.xaml
@@ -17,8 +17,11 @@
                 <DataTemplate>
                     <ViewCell>
                         <Frame
-                            CornerRadius="20"
+                            CornerRadius="10"
                             Margin="0,0,0,5">
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer Command ="{Binding SelectPropertyCommand}"/>
+                            </Frame.GestureRecognizers>
                             <StackLayout>
                                 <ffimageloading:CachedImage
 	                                    Grid.Column="0"
