--- a/MyLeasing.Prism/MyLeasing.Prism/Views/PropertyPage.xaml
+++ b/MyLeasing.Prism/MyLeasing.Prism/Views/PropertyPage.xaml
@@ -2,40 +2,42 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
-             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"             
-             xmlns:syncfusion="clr-namespace:Syncfusion.SfRotator.XForms;assembly=Syncfusion.SfRotator.XForms"             
+             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"        	 
+         	 xmlns:syncfusion="clr-namespace:Syncfusion.SfRotator.XForms;assembly=Syncfusion.SfRotator.XForms"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="MyLeasing.Prism.Views.PropertyPage"
+             IconImageSource="ic_action_home"
              Title="{Binding Title}">
 
     <ScrollView>
         <StackLayout
             Padding="10">
-            <!--<syncfusion:SfRotator
-                BackgroundColor="#ececec"
-                EnableAutoPlay="True"  
-                EnableLooping="True"
-                HeightRequest="300"
-                ItemsSource="{Binding ImageCollection}"
-                NavigationDelay="5000"
-                NavigationDirection="Horizontal"
-                NavigationStripMode="Dots"
-                NavigationStripPosition="Bottom">
+            <syncfusion:SfRotator
+            	BackgroundColor="#ececec"
+            	EnableAutoPlay="True"  
+            	EnableLooping="True"
+            	HeightRequest="300"
+            	ItemsSource="{Binding ImageCollection}"
+            	NavigationDelay="5000"
+            	NavigationDirection="Horizontal"
+            	NavigationStripMode="Dots"
+            	NavigationStripPosition="Bottom">
                 <syncfusion:SfRotator.ItemTemplate>
-                    <DataTemplate>-->
+                    <DataTemplate>
                         <ffimageloading:CachedImage
-                            Aspect="AspectFit"
-                            CacheDuration= "50"
-                            DownsampleToViewSize = "true"
-                            ErrorPlaceholder= "ErrorImage"
-                            HeightRequest="200"
-                            LoadingPlaceholder= "LoaderImage"
-                            RetryCount= "3"
-                            RetryDelay= "600"
-                            Source="{Binding Property.FirsImage}"/>
-                    <!--</DataTemplate>
+                        	Aspect="AspectFit"
+                        	CacheDuration= "50"
+                        	DownsampleToViewSize = "true"
+                        	ErrorPlaceholder= "ErrorImage"
+                        	HeightRequest="300"
+                        	LoadingPlaceholder= "LoaderImage"
+                        	RetryCount= "3"
+                        	RetryDelay= "600"
+                        	Source="{Binding Image}"/>
+                    </DataTemplate>
                 </syncfusion:SfRotator.ItemTemplate>
-            </syncfusion:SfRotator>-->
+            </syncfusion:SfRotator>
+
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
